TrialoftheTitansPackage/main/default/objects/Question_Assignment__c/Question_Assignment__c.object-meta.xml
<CustomObject>
    <label>Question Assignment</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Question Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>