TrialoftheTitansPackage/main/default/objects/Question_Assignment__c/fields/CompoundKey__c.field-meta.xml
<CustomField>
    <fullName>CompoundKey__c</fullName>
    <label>CompoundKey</label>
    <type>TextArea</type>
</CustomField>