TrialoftheTitansPackage/main/default/objects/Question_Assignment__c/fields/Exam_Question__c.field-meta.xml
<CustomField>
    <fullName>Exam_Question__c</fullName>
    <label>Exam Question</label>
    <referenceTo>Exam_Question__c</referenceTo>
    <relationshipLabel>Question Assignments</relationshipLabel>
    <relationshipName>Question_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>