TrialoftheTitansPackage/main/default/objects/Question_Assignment__c/fields/Question_Pool__c.field-meta.xml
<CustomField>
    <fullName>Question_Pool__c</fullName>
    <label>Question Pool</label>
    <referenceTo>Question_Pool__c</referenceTo>
    <relationshipLabel>Question Assignments</relationshipLabel>
    <relationshipName>Question_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>